2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* input/regression/tie-chord-partial.ly: new file.

2003-03-05  Heikki Junes <hjunes@cc.hut.fi>

	* lilypond.words: add 3

2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/new-markup.scm (markup-function-list): add finger-markup

	* input/tutorial/brahms-tweaked.ly: new markup 

	* scm/bass-figure.scm (brew-one-figure): bugfix for large bass figures 

	* scm/new-markup.scm (brew-new-markup-molecule): robustness: don't
	crash when processing '() markup

	* input/regression/breathing-sign.ly (texidoc): add caesura example.

	* lily/breathing-sign.cc (railtracks): another caesura.

	* mf/feta-schrift.mf: caesura symbol. 

2003-03-04  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scripts/convert-ly.py (FatalConversionError.conv): add
	ly:molecule-XXX conversions.

	* lily/molecule-scheme.cc: change names to ly:molecule-XXX

	* input/regression/multi-measure-rest-text.ly: new file.

	* scm/music-functions.scm (glue-mm-rest-texts): automatically
	convert MMREST-TEXT to MultiMeasureRestNumber settings.

	* ly/engraver-init.ly (ScoreContext): move tablature settings to
	ScoreContext

	* scm/new-markup.scm (center-markup): \center markup.

	* scm/music-functions.scm: remove pitchify scripts.

	* lily/music.cc (print_smob): display music name if available 

2003-03-02  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* Documentation/user/refman.itely (Instrument names): remove
	\turnOff doco.

2003-03-01  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/score.cc (mark_smob): bugfix.

	* input/regression/rehearsal-mark.ly: new file.

	* lily/my-lily-parser.cc (here_input): revert reporting of errors:
	report error at the current token again.

2003-02-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* cygwin/mknetrel: Exit if doc build fails.

	* lily/GNUmakefile: Add hack for .deps and --srcdir build.

2003-02-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* scm/music-types.scm (music-descriptions): add doc strings
