@@ -1,5 +1,15 @@
 2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
 
+	* python/lilylib.py (make_page_images): add function.
+
+	* scripts/ly2dvi.py (run_latex): include title in preview image.
+
+	* scripts/lilypond-book.py (process_ly2dvi_blocks): call ly2dvi
+	from lilypond-book for <ly2dvifile> tags in HTML.
+
+	* scripts/ly2dvi.py (option_definitions): add --debug option to
+	print out environment.
+
 	* input/regression/tie-chord-partial.ly: new file.
 
 2003-03-05  Heikki Junes <hjunes@cc.hut.fi>
